--- a/main/templates/main/product_info.html
+++ b/main/templates/main/product_info.html
@@ -5,8 +5,28 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="{{ item.image.url }}" alt="{{ item.title }}" class="img-fluid">
+                <!-- Bootstrap Carousel -->
+                <button class="btn btn-primary" onclick="window.location.href='{% url 'product_catalog' category=item.category %}'">Back to Catalog</button>
+
+                <div id="itemCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        {% for image in item.itemimage_set.all %}
+                            <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                                <img src="{{ image.image.url }}" class="d-block w-100" alt="Item Image">
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <a class="carousel-control-prev" href="#itemCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#itemCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
+            
             <div class="col-md-6">
                 <h2>{{ item.name }}</h2>
 
