--- a/main/templates/main/product_info.html
+++ b/main/templates/main/product_info.html
@@ -30,8 +30,8 @@
             <div class="col-md-6">
                 <h2>{{ item.name }}</h2>
 
-                <p>{{ item.description }}</p>
-                <p>{{ item.price }}</p>
+                <p>Description: {{ item.description }}</p>
+                <p>Price: RM {{ item.price }}</p>
                 
                 <!-- Quantity input with plus and minus buttons -->
                 <div>
