--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -90,7 +90,7 @@
                     <a class="nav-link" href="{% url 'cart' %}">Cart</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="{% url 'landing' %}">About</a>
                 </li>
             </ul>
         </div>
@@ -119,14 +119,14 @@
                 <p>Email: mendfromwithin@gmail.com</p>
                 <!-- Add social media links here -->
                 <p>
-                    <a href="https://www.facebook.com/mendfromwithin" target="_blank" class="social-link">instagram</a>
-                    <a href="https://www.twitter.com/mendfromwithin" target="_blank" class="social-link">Tiktok</a>
+                    <a href="https://www.instagram.com/mendfromwithin/" target="_blank" class="social-link">Instagram</a>
+                    <a href="https://www.tiktok.com/@mendfromwithin_?_t=8j8Q4iwUNtZ&_r=1" target="_blank" class="social-link">Tiktok</a>
                     <!-- Add more social media links as needed -->
                 </p>
             </div>
             <div class="col-md-8">
                 <h4>About Us</h4>
-                <p>Mend From Within, is where personal development and well-being take center stage. Our goal is to support individuals, empowering them to overcome challenges and achieve inner healing.</p>
+                <p>Mend From Within, a wellness brand that focus on individual’s well being. Join us to begin your inner journey.</p>
             </div>
         </div>
     </div>
