--- a/main/templates/main/product_catalog.html
+++ b/main/templates/main/product_catalog.html
@@ -6,16 +6,17 @@
     <div class="row">
         <div class="col-md-12">
             <div class="jumbotron">
-                {% if category == 'bundle' %}
-                    <p style="font-size: 18px; font-weight: bold;">Mend With Love Collection</p>
+                {% if items and items.0.category == 'bundle' %}
+                    <p style="font-size: 30px; font-weight: bold;">Mend With Love Collection</p>
                     <p>Celebrate love with us</p>
-                {% elif category == 'cosy' %}
-                    <p style="font-size: 18px; font-weight: bold;">Cosy Wear Collection</p>
+                {% elif items and items.0.category == 'cosy' %}
+                    <p style="font-size: 30px; font-weight: bold;">Cosy Wear Collection</p>
                     <p>Healing your mind, one cosy step at a time</p>
                 {% else %}
-                    <p style="font-size: 18px; font-weight: bold;">Mend With Love Collection</p>
+                    <p style="font-size: 30px; font-weight: bold;">Mend With Love Collection</p>
                     <p>Celebrate love with us</p>
                 {% endif %}
+
             </div>
             
         </div>
@@ -48,12 +49,10 @@
                         {% if item.category == 'bundle' %}
                             {% if item.name == 'The_Perfect_Date_Bundle' %}
                                 The Perfect Date Bundle
-                            {% elif item.name == 'For You and I"Bundle' %}
-                                For You and I Bundle
                             {% elif item.name == 'All_about_love_Bundle' %}
                                 All about love Bundle
                             {% else %}
-                                {{ item.name }}
+                                For You and I Bundle
                             {% endif %}
                         {% else %}
                             {{ item.name }}
