--- a/main/templates/main/product_info.html
+++ b/main/templates/main/product_info.html
@@ -28,7 +28,7 @@
             </div>
             
             <div class="col-md-6">
-                <h5 class="card-title">
+                <h5 class="card-title" style="margin-top: 40px;">
                     {% if item.category == 'bundle' %}
                         {% if item.name == 'The_Perfect_Date_Bundle' %}
                             The Perfect Date Bundle
@@ -54,14 +54,19 @@
                     <button id="increment">+</button>
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="size">Select Size:</label>
                     <select class="form-control" id="size">
                         <option value="small">Small</option>
                         <option value="medium">Medium</option>
                         <option value="large">Large</option>
                         <!-- Add more size options as needed -->
-                    </select>
+                    <!-- </select>
+                </div> -->
+
+                <div class="form-group" style="margin-top: 30px;">
+                    <label for="customInput">Please input your sizes for each of the items</label>
+                    <input type="text" class="form-control" id="customInput" placeholder="Enter custom value">
                 </div>
                 
                 <!-- Add to Cart button -->
@@ -111,6 +116,10 @@
         var jq = jQuery.noConflict();
 
         jq(document).ready(function() {
+            var item = {
+            category: "{{ item.category }}",  // Make sure to replace this with the actual category value
+        };
+
             if (typeof jQuery == 'undefined') {
                 console.error('jQuery is not loaded.');
             } else {
@@ -136,11 +145,10 @@
             // Add to Cart button
             jq('#addToCart').click(function() {
                 var quantity = parseInt(quantityInput.val(), 10);
-                var size = jq('#size').val();
+                var size = jq('#customInput').val() ;
                 console.log("Quantity:", quantity);
                 var csrftoken = getCookie('csrftoken');
                 var itemName = "{{ item.name }}";
-                
 
                 // Make an AJAX request to the server
                 jq.ajax({
@@ -151,9 +159,6 @@
                     },
                     success: function (response) {
                         // Handle the response from the server
-                        // jq('#responseContainer').html('<p>' + response.message + '</p>');
-
-                        // Open the modal and display the response message
                         jq('#responseModalBody').html(response.message);
                         jq('#responseModal').modal('show');
 
@@ -167,6 +172,17 @@
                     }
                 });
             });
+            function toggleInputVisibility() {
+                
+                jq('#size').toggle(!isBundle);
+                jq('#customInput').toggle(isBundle);
+            }
+
+            // Initial visibility setup
+            toggleInputVisibility();
+
+            // Update visibility when category changes
+            jq('#size, #customInput').on('change', toggleInputVisibility);
         });
     </script>
 {% endblock %}
